basic setup and logic part are completed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Vanilla JavaScript Projects</title>
   </head>
   <body>
@@ -49,9 +49,9 @@
                   operations such as addition, subtraction, multiplication and
                   division.
                 </p>
-                <a
+                <a href="./js-projects/01-calculator-app/index.html"
                   class="mt-3 text-emerald-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
