--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                   Build a Stopwatch app which starts by pressing the button
                   start and stop by stop button also there is a reset button.
                 </p>
-                <a
+                <a href="./js-projects/02-stopwatch-app/index.html"
                   class="mt-3 text-orange-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
