--- a/js-projects/01-calculator-app/index.html
+++ b/js-projects/01-calculator-app/index.html
@@ -12,6 +12,14 @@
     <title>Calculator App</title>
 </head>
 <body class="body-font bg-gray-200">
+    <div class="p-4 flex flex-row">
+        <a href="../../index.html">
+            <img src="../images/house-solid.svg" alt="home" class="w-6 h-6 mr-2 cursor-pointer">
+        </a>
+        <a href="https://github.com/Torjuman/javascript-mini-projects-iNeuron-fsjs2022/tree/main/js-projects/01-calculator-app" target="_blank" rel="noopener noreferrer">
+            <img src="../images/github.svg" alt="github" class="w-6 h-6 ml-2 cursor-pointer">
+        </a>
+    </div>
     <div class="container mx-auto mt-10 text-crimson-600">
         <div class="flex flex-col items-center">
             <div class="w-64 p-5 bg-white flex flex-col items-end border-2 border-solid border-gray-200 rounded-lg drop-shadow">
