icon and README file added to stopwatch project

--- a/js-projects/02-stopwatch-app/index.html
+++ b/js-projects/02-stopwatch-app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
@@ -11,6 +12,15 @@
     <title>Stopwatch App</title>
 </head>
 <body class="text-gray-600 bg-orange-200">
+    <div class="p-4 flex flex-row">
+        <a href="../../index.html">
+            <img src="../images/house-solid.svg" alt="home" class="w-6 h-6 mr-2 cursor-pointer">
+        </a>
+        <a href="https://github.com/Torjuman/javascript-mini-projects-iNeuron-fsjs2022/tree/main/js-projects/02-stopwatch-app"
+            target="_blank" rel="noopener noreferrer">
+            <img src="../images/github.svg" alt="github" class="w-6 h-6 ml-2 cursor-pointer">
+        </a>
+    </div>
     <div class="container mx-auto h-v-full flex flex-col items-center justify-center">
         <div class="bg-orange-200 hover:watch tracking-widest cursor-pointer flex justify-center items-center w-200px h-200px text-5xl rounded-full shadow-orange-34">
             <span id="hours">00</span> :
