countdown app setup and logic part has completed

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                   Build a countdown app which takes the start position from the
                   user and on reaching zero, the countdown stops.
                 </p>
-                <a
+                <a href="./js-projects/03-countdown-app/index.html"
                   class="mt-3 text-cyan-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
