--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                   Build a word count app which only calculates the number of
                   characters given by the user.
                 </p>
-                <a
+                <a href="./js-projects/04-word-count-app/index.html"
                   class="mt-3 text-indigo-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
