logic and basic setup for palindrome checker

--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                   Users can enter text or numbers and check whether the entered
                   value is palindrome or not by clicking on the check button.
                 </p>
-                <a
+                <a href="./js-projects/05-palindrome-checker-game/index.html"
                   class="mt-3 text-rose-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
