basic setup and logic part done on form validation

--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
                   show an error message. To validate the password you can use
                   RegEx.
                 </p>
-                <a
+                <a href="./js-projects/06-form-validation/index.html"
                   class="mt-3 text-teal-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
