to do project's logical part completed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                   operations such as addition, subtraction, multiplication and
                   division.
                 </p>
-                <a href="./js-projects/01-calculator-app/index.html"
+                <a
+                  href="./js-projects/01-calculator-app/index.html"
                   class="mt-3 text-emerald-600 font-medium inline-flex items-center cursor-pointer"
                   >Watch Now
                   <svg
@@ -98,7 +99,8 @@
                   Build a Stopwatch app which starts by pressing the button
                   start and stop by stop button also there is a reset button.
                 </p>
-                <a href="./js-projects/02-stopwatch-app/index.html"
+                <a
+                  href="./js-projects/02-stopwatch-app/index.html"
                   class="mt-3 text-orange-600 font-medium inline-flex items-center cursor-pointer"
                   >Watch Now
                   <svg
@@ -147,7 +149,8 @@
                   Build a countdown app which takes the start position from the
                   user and on reaching zero, the countdown stops.
                 </p>
-                <a href="./js-projects/03-countdown-app/index.html"
+                <a
+                  href="./js-projects/03-countdown-app/index.html"
                   class="mt-3 text-cyan-600 font-medium inline-flex items-center cursor-pointer"
                   >Watch Now
                   <svg
@@ -198,7 +201,8 @@
                   Build a word count app which only calculates the number of
                   characters given by the user.
                 </p>
-                <a href="./js-projects/04-word-count-app/index.html"
+                <a
+                  href="./js-projects/04-word-count-app/index.html"
                   class="mt-3 text-indigo-600 font-medium inline-flex items-center cursor-pointer"
                   >Watch Now
                   <svg
@@ -247,7 +251,8 @@
                   Users can enter text or numbers and check whether the entered
                   value is palindrome or not by clicking on the check button.
                 </p>
-                <a href="./js-projects/05-palindrome-checker-game/index.html"
+                <a
+                  href="./js-projects/05-palindrome-checker-game/index.html"
                   class="mt-3 text-rose-600 font-medium inline-flex items-center cursor-pointer"
                   >Watch Now
                   <svg
@@ -299,7 +304,8 @@
                   show an error message. To validate the password you can use
                   RegEx.
                 </p>
-                <a href="./js-projects/06-form-validation/index.html"
+                <a
+                  href="./js-projects/06-form-validation/index.html"
                   class="mt-3 text-teal-600 font-medium inline-flex items-center cursor-pointer"
                   >Watch Now
                   <svg
@@ -351,8 +357,9 @@
                   also delete the tasks.
                 </p>
                 <a
+                  href="./js-projects/07-to-do-app/index.html"
                   class="mt-3 text-red-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
