--- a/index.html
+++ b/index.html
@@ -407,8 +407,9 @@
                   colours resulting from the combination of primary colours.
                 </p>
                 <a
+                  href="./js-projects/08-colour-game/index.html"
                   class="mt-3 text-purple-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
