--- a/js-projects/08-colour-game/index.html
+++ b/js-projects/08-colour-game/index.html
@@ -4,127 +4,149 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colour game</title>
+    <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="./colourgame.css" />
+    <title>Colour Game</title>
   </head>
-  <body>
-    <h1>Colour game</h1>
-    <div class="">
-      <div class="">
-        <div class="" id="result">Start The Game</div>
-        <div class="">
-          <h1>Your picked colour</h1>
-          <p>Score : <span id="user-score">00</span></p>
-          <input
-            type="button"
-            class=""
-            id="user-colour-pick"
-            style="
-              width: 100px;
-              height: 50px;
-              background-color: rgb(255, 255, 255);
-            "
-          />
+  <body class="text-purple-600 bg-purple-200">
+    <div class="p-4 flex flex-row">
+      <a href="../../index.html">
+        <img
+          src="../images/house-solid.svg"
+          alt="home"
+          class="w-6 h-6 mr-2 object-cover object-center cursor-pointer"
+        />
+      </a>
+      <a
+        href="https://github.com/Torjuman/javascript-mini-projects-iNeuron-fsjs2022/tree/main/js-projects/08-colour-game"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img
+          src="../images/github.svg"
+          alt="github"
+          class="w-6 h-6 ml-2 object-cover object-center cursor-pointer"
+        />
+      </a>
+    </div>
+    <h1 class="text-5xl font-medium text-center font-lobster">Colour Game</h1>
+    <div class="container mx-auto flex flex-col items-center justify-center">
+      <div class="bg-purple-200 w-9/10 p-5 rounded shadow-purple-34 mt-6 mb-2">
+        <div class="text-center text-2xl font-montserrat mb-5" id="result">
+          Start The Game
         </div>
-        <div class=""></div>
-        <div class="">
-          <h1>Computer picked colour</h1>
-          <p>Score : <span id="computer-score">00</span></p>
-          <input
-            type="button"
-            class=""
-            id="computer-colour-pick"
-            style="
-              width: 100px;
-              height: 50px;
-              background-color: rgb(255, 255, 255);
-            "
-          />
+        <div class="flex flex-row">
+          <div class="w-1/2 mr-2">
+            <h1 class="font-medium mb-2">Your picked colour</h1>
+            <input
+              type="button"
+              class="w-full h-48 shadow rounded"
+              id="user-colour-pick"
+              style="background-color: rgb(255, 255, 255)"
+            />
+            <p class="font-medium">Score : <span id="user-score">00</span></p>
+          </div>
+          <div class="w-1/2 ml-2">
+            <h1 class="font-medium mb-2">Computer picked colour</h1>
+            <input
+              type="button"
+              class="w-full h-48 shadow rounded"
+              id="computer-colour-pick"
+              style="background-color: rgb(255, 255, 255)"
+            />
+            <p class="font-medium">
+              Score : <span id="computer-score">00</span>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="">
+      <div class="w-full p-5 flex flex-row flex-wrap gap-2" id="colour-pallet">
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(220, 38, 38)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(217, 119, 6)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(234, 88, 12)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(202, 138, 4)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(101, 163, 13)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(22, 163, 74)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(5, 150, 105)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(13, 148, 136)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(8, 145, 178)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(2, 132, 199)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(37, 99, 235)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(79, 70, 229)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(124, 58, 237)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(147, 51, 234)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(192, 38, 211)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(219, 39, 119)"
         />
         <input
           type="button"
-          class="btn"
+          class="btn w-20 h-20 rounded shadow cursor-pointer"
           style="background-color: rgb(225, 29, 72)"
         />
       </div>
