--- a/js-projects/08-colour-game/index.html
+++ b/js-projects/08-colour-game/index.html
@@ -63,93 +63,10 @@
           </div>
         </div>
       </div>
-      <div class="w-full p-5 flex flex-row flex-wrap gap-2" id="colour-pallet">
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(220, 38, 38)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(217, 119, 6)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(234, 88, 12)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(202, 138, 4)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(101, 163, 13)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(22, 163, 74)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(5, 150, 105)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(13, 148, 136)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(8, 145, 178)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(2, 132, 199)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(37, 99, 235)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(79, 70, 229)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(124, 58, 237)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(147, 51, 234)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(192, 38, 211)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(219, 39, 119)"
-        />
-        <input
-          type="button"
-          class="btn w-20 h-20 rounded shadow cursor-pointer"
-          style="background-color: rgb(225, 29, 72)"
-        />
-      </div>
+      <div
+        class="w-full p-5 flex flex-row flex-wrap gap-2"
+        id="colour-pallet"
+      ></div>
     </div>
     <script src="./app.js"></script>
   </body>
