--- a/index.html
+++ b/index.html
@@ -457,8 +457,9 @@
                   the time the user takes to type.
                 </p>
                 <a
+                  href="./js-projects/09-typing-game/index.html"
                   class="mt-3 text-sky-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
